css/main.css
.body {
	background-color: #A4E3FF;
}

.main {
	min-width: 768px;
	max-height: auto;
	margin: auto;
	position: relative;
	text-align: center;
}

#howTo {
	margin-bottom: 10px;
}

#topOfBoard {
	display: inline-block;
	border: 1px dotted black;
	max-width: auto;
	float: top;
	position: relative;
	margin-bottom: 10px;
}

#rcs {
	display: inline-block;
}

#colorDisplay {
	display: inline-block;
	border: 1px solid black;
	width: 100px;
	height: 75px;
	text-align: center;
	vertical-align: center;
	line-height: 75px;
	background-color: white;
}

#stink {
	display: inline-block;
	border: 1px solid green;
	width: 100px;
	height: 75px;
	text-align: center;
	vertical-align: center;
	line-height: 75px;
}

#innerContainer {
	width: 768px;
	max-height: auto;
	margin: auto;
	position: relative;
	text-align: center;
}

.board {
	display: inline-block;
	border: 1px solid blue;
	width: 500px;
	margin: auto;
	padding: 5px;
	position: relative;
	text-align: center;
	float: center;
}

.cells {
	display: inline-block;
	border: 1px solid black;
	height: 100px;
	width: 100px;
	margin: 5px;
	text-align: center;
	vertical-align: center;
	line-height: 100px;
}

.container {
	display: inline-block;
	border: 1px dotted black;
	height: 400px;
	width: 100px;
	position: relative;
}

#container1 {
	float: left;
}

#container2 {
	float: right;
}

#start {
	display: inline-block;
}

#bug1 {
/*	background-color: red; */
}

#bug2 {
	background-color: blue;
}

#bug3 {
	background-color: yellow;
}

#bug4 {
	background-color: purple;
}

